--- a/style.css
+++ b/style.css
@@ -127,6 +127,166 @@ h5 {
     background-color: var(--green);
 }
 
+/* Accordian */
+
+.my-accordion {}
+
+.my-accordion-item {
+    background-color: var(--white);
+    padding: 3% 2%;
+    border-radius: 45px;
+    margin-bottom: 3%;
+    box-shadow: 0 5px 0 var(--black);
+    border: 1px solid var(--black);
+}
+
+.my-accordion-item.active {
+    background-color: var(--green);
+}
+
+.my-accordian-toggle-btn {
+    border: 2px solid var(--black);
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    background: var(--white) !important;
+
+    &>i {
+        transition: 1s;
+    }
+}
+
+/* contact us form */
+.form-container {
+    background-color: var(--white);
+    border-radius: 45px;
+    height: 33rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.form-container>div {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-img {
+    position: absolute;
+    right: 0;
+    height: 80%;
+}
+
+.form-header {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.form-header label {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.form-header input[type="radio"] {
+    accent-color: var(--green);
+}
+
+/* footer */
+
+footer {
+    margin-top: 7%;
+    background-color: var(--black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    border-radius: 45px 45px 0 0;
+}
+
+footer>div {
+    width: 90%;
+    height: 80%;
+    /* background-color: blue; */
+    color: #fff;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: underline;
+}
+
+.rounded-full {
+    border-radius: 50%;
+}
+
+.footer-contact {
+    display: flex;
+    justify-content: space-between;
+    gap: 10%;
+    align-items: center;
+
+}
+
+.footer-contact>div:first-child {
+    /* background-color: blue; */
+    flex: 40;
+}
+
+.footer-contact>div:nth-child(2) {
+    flex: 50;
+}
+
+.footer-contact .heading {
+    background-color: var(--green);
+    color: var(--black);
+    padding: 4px 8px;
+    display: inline-block;
+    border-radius: 12px;
+    margin-bottom: 12px;
+
+}
+
+.footer-form {
+    background-color: #3e404e;
+    display: flex;
+    gap: 4%;
+    height: 150px;
+    border-radius: 12px;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-form>input,
+.footer-form>button {
+    padding: 12px;
+    box-sizing: border-box;
+}
+
+.footer-form>input {
+    padding: 10px;
+    outline: 2px solid var(--black);
+    border: none;
+    border-radius: 8px;
+
+    &:focus {
+        outline: 2px solid var(--green);
+    }
+}
+
+.footer-form>button {
+    background-color: var(--green);
+    border: none;
+    border-radius: 8px;
+}
+
 @media only screen and (max-width:992px) {
     .services-row>div {
         width: 100%;
@@ -146,6 +306,10 @@ h5 {
     .services-row {
         display: block;
     }
+
+    .form-img {
+        display: none;
+    }
 }
 
 @media only screen and (max-width:576px) {
@@ -159,5 +323,9 @@ h5 {
 
     .services-row>div:first-child {
         margin-bottom: 8%;
+    }
+
+    .my-accordion-item {
+        padding: 7%;
     }
 }
