--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ h5 {
     background-color: var(--white);
     margin-bottom: 13px;
 
+    & h3 {
+        background-color: var(--green);
+    }
 }
 
 .service-cols-inner a {
@@ -268,10 +271,10 @@ footer a {
     box-sizing: border-box;
 }
 
-.footer-form>input {
+.footer-form>div>input {
     padding: 10px;
-    outline: 2px solid var(--black);
     border: none;
+    outline: none;
     border-radius: 8px;
 
     &:focus {
@@ -279,10 +282,20 @@ footer a {
     }
 }
 
-.footer-form>button {
+.footer-form>div {
+    flex: 60 !important;
+
+    &>input {
+        color: var(--white) !important;
+    }
+}
+
+.footer-form button {
     background-color: var(--green);
     border: none;
     border-radius: 8px;
+    flex: 40;
+    font-size: 14px;
 }
 
 .custom-inp:focus {
@@ -321,7 +334,7 @@ footer a {
         padding: 10%;
         align-items: stretch;
         flex-direction: column;
-        gap: 12px;
+        gap: 14px;
     }
 
 }
