--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     --white: #F3F3F3;
 }
 
+::selection {
+    color: #000;
+    background-color: var(--green);
+}
+
 @font-face {
     font-family: "regular";
     src: url("./assets/fonts/static/SpaceGrotesk-Regular.ttf");
@@ -228,7 +233,7 @@ h5 {
 .contact-form-btn:hover {
     background-color: #fff;
     color: var(--black);
-    border: 1px solid  var(--black);
+    border: 1px solid var(--black);
 }
 
 /* footer */
